[gd_scene load_steps=8 format=3 uid="uid://b84uyu5ji72ah"]

[ext_resource type="Script" path="res://Test/Player/playervsbats.gd" id="1_62ilc"]
[ext_resource type="PackedScene" uid="uid://pcx51ty550r8" path="res://Mechanics/Player/player_rope.tscn" id="2_qa2e3"]
[ext_resource type="PackedScene" uid="uid://dxiiui4ggfm4t" path="res://Mechanics/Enemies/BatSpawner/bat_spawner.tscn" id="3_6ebi3"]
[ext_resource type="PackedScene" uid="uid://b8i25r8apvu52" path="res://UI/Ingame/ingame_hud.tscn" id="4_emiqk"]
[ext_resource type="PackedScene" uid="uid://bjh6sj6ppu4m0" path="res://Mechanics/HitHurtTriggerBox/triggerbox.tscn" id="5_vxvmy"]
[ext_resource type="Script" path="res://Scripts/Actions/ActionFolder/player_fell.gd" id="6_qqumn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73giw"]
size = Vector2(4364, 48)

[node name="Playervsbats" type="Node2D"]
script = ExtResource("1_62ilc")

[node name="PlayerRope" parent="." instance=ExtResource("2_qa2e3")]
position = Vector2(512, -328)

[node name="BatSpawner" parent="." instance=ExtResource("3_6ebi3")]
position = Vector2(280, 624)

[node name="BatSpawner2" parent="." instance=ExtResource("3_6ebi3")]
position = Vector2(488, 624)

[node name="BatSpawner3" parent="." instance=ExtResource("3_6ebi3")]
position = Vector2(688, 616)

[node name="BatSpawner4" parent="." instance=ExtResource("3_6ebi3")]
position = Vector2(856, 608)

[node name="BatSpawner5" parent="." instance=ExtResource("3_6ebi3")]
position = Vector2(1008, 624)

[node name="BatSpawner6" parent="." instance=ExtResource("3_6ebi3")]
position = Vector2(1008, 624)

[node name="BatSpawner7" parent="." instance=ExtResource("3_6ebi3")]
position = Vector2(368, 616)

[node name="Button" type="Button" parent="."]
offset_left = 48.0
offset_top = 144.0
offset_right = 184.0
offset_bottom = 200.0
text = "Spawn"

[node name="IngameHud" parent="." instance=ExtResource("4_emiqk")]

[node name="Triggerbox" parent="." node_paths=PackedStringArray("action") instance=ExtResource("5_vxvmy")]
position = Vector2(240, 824)
collision_layer = 0
collision_mask = 2
action = NodePath("../PlayerFell")

[node name="CollisionShape2D" parent="Triggerbox" index="0"]
position = Vector2(280, -104)
shape = SubResource("RectangleShape2D_73giw")

[node name="PlayerFell" type="Node" parent="."]
script = ExtResource("6_qqumn")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]

[editable path="Triggerbox"]
